updated old W3C normative references; fixes #287

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1684,14 +1684,14 @@ be able to expand CURIEs into IRIs when requested.
 % the edition cited applies. For undated references, the latest edition of the referenced document (including any
 % amendments) applies.
   \item{W3C/TR REC-ldp-20150226:2015} {Linked Data Platform 1.0. W3C Recommendation, 26 February 2015.\\ \url{http://www.w3.org/TR/2015/REC-ldp-20150226/}}
-  \item{W3C/TR REC-owl2-syntax:2009} {OWL 2 Web Ontology Language: Structural Specification and Functional-Style Syntax. W3C Recommendation, 27 October 2009.\\ \url{http://www.w3.org/TR/2009/REC-owl2-syntax-20091027/}}
+  \item{W3C/TR REC-owl2-syntax:2012} {OWL 2 Web Ontology Language: Structural Specification and Functional-Style Syntax (Second Edition). W3C Recommendation, 11 December 2012.\\ \url{http://www.w3.org/TR/2012/REC-owl2-syntax-20121211/}}
   \item{ISO/IEC 14977:1996} {Information technology – Syntactic metalanguage – Extended BNF}
   \item{W3C/TR REC-xml:2008} {Extensible Markup Language (XML) 1.0 (Fifth Edition). W3C Recommendation, 26 November 2008. \\
   \url{http://www.w3.org/TR/2008/REC-xml-20081126/}}
   \item{W3C/TR REC-owl2-primer:2012} {OWL 2 Web Ontology Language: Primer (Second Edition). W3C Recommendation, 11 December 2012. \\
   \url{http://www.w3.org/TR/2012/REC-owl2-primer-20121211/}}
-  \item{W3C/TR REC-owl2-profiles:2009} {OWL 2 Web Ontology Language: Profiles. W3C Recommendation, 27 October 2009. \\
-  \url{http://www.w3.org/TR/2009/REC-owl2-profiles-20091027/}}
+  \item{W3C/TR REC-owl2-profiles:2012} {OWL 2 Web Ontology Language: Profiles (Second Edition). W3C Recommendation, 11 December 2012. \\
+  \url{http://www.w3.org/TR/2012/REC-owl2-profiles-20121211/}}
   \item{ISO/IEC 24707:2007} {Information technology – Common Logic (CL): a framework for a family of logic-based languages}
   \item{OMG Document ptc/2013-09-05:} {OMG Unified Modeling Language (OMG UML)\\
   \url{http://www.omg.org/spec/UML/Current}}
@@ -1702,7 +1702,7 @@ be able to expand CURIEs into IRIs when requested.
   \item{W3C/TR REC-rdf11-concepts:2014} {RDF 1.1 Concepts and Abstract Syntax.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}}
   \item{W3C/TR REC-xml-names:2009} {Namespaces in XML 1.0 (Third Edition). W3C Recommendation, 8 December 2009.\\
    \url{http://www.w3.org/TR/2009/REC-xml-names-20091208/}}
-  \item{W3C/TR REC-rdfa-core:2013} {RDFa Core 1.1 -- Second Edition.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 22 August 2013.\\ \url{http://www.w3.org/TR/2013/REC-rdfa-core-20130822/}}
+  \item{W3C/TR REC-rdfa-core:2015} {RDFa Core 1.1 -- Third Edition.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 17 March 2015.\\ \url{http://www.w3.org/TR/2015/REC-rdfa-core-20150317/}}
   % This standard has no unique year, as it consist of multiple parts (see http://tools.ietf.org/html/rfc3629#ref-ISO.10646)
   \item{ISO/IEC 10646} {Information technology – Universal Multiple-Octet coded Character Set (UCS)}
   %\item{W3C/TR REC-rdf-sparql-query:2008} {SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
@@ -1722,7 +1722,7 @@ Reference.  W3C Recommendation, 18 August 2009\\ \url{http://www.w3.org/TR/2009/
   \item{ODM} {Ontology Definition Metamodel, 2 September 2014. \\ \url{http://www.omg.org/spec/ODM/1.1/}}
 \item{MOF} { Meta Object Facility} \\ \url{http://http://www.omg.org/mof/}
 \item{SMOF} { Support for Semantic Structure, April 2013} \\ \url{http://www.omg.org/spec/SMOF/1.0/}
-\item{XMI} {Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI//}
+\item{XMI} {Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI/}
 %\item{PRR} {Production Rule Representation, December 2009} \\ \url{ http://www.omg.org/spec/PRR/1.0// }
 \item{SBVR} {Semantics Of Business Vocabulary And Rules, November 2013} \\ \url{http://www.omg.org/spec/SBVR/}
 \item{DTV} {Date-Time Vocabulary, August 2013} \\ \url{http://www.omg.org/spec/DTV/1.0/}
@@ -1856,7 +1856,7 @@ systems}
   \end{note}
 
   \begin{example}
-    Non-logical symbols in OWL \nisref{W3C/TR REC-owl2-syntax:2009} (there called ``entities'') comprise
+    Non-logical symbols in OWL \nisref{W3C/TR REC-owl2-syntax:2012} (there called ``entities'') comprise
     \begin{itemize}
     \item individuals (denoting objects from the domain of discourse),
     \item classes (denoting sets of objects; also called concepts), and
@@ -2831,7 +2831,7 @@ not considered sentences of that OMS.
   
   % \termdefinition{annotation property}{OMS entity that represents a set of pairs $(s, o)$, where $s$ is an annotation subject and $o$ is an annotation object}\todonote{TM: why a set of pairs and not just one pair?}
   % \begin{note}
-  %   Adapted from \nisref{W3C/TR REC-owl2-syntax:2009, Section 5.5}
+  %   Adapted from \nisref{W3C/TR REC-owl2-syntax:2012, Section 5.5}
   % \end{note}
  
 %  \termdefinition{literate programming}{writing style of freely interweaving natural language documentation and formal expressions, referencing each other in a fine-grained way}
@@ -4405,7 +4405,7 @@ SeparatorChar  ::= ipchar | gen-delims - '#'+$<$\rm as defined in \nisref{IETF/R
 \end{lstlisting}
 
 
- Note that the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core:2013, Section 6}) is denoted by a colon inside the prefix map, but it is omitted in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
+ Note that the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core:2015, Section 6}) is denoted by a colon inside the prefix map, but it is omitted in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
 
 \vspace{1em}
 	
@@ -5037,7 +5037,7 @@ language lang:OWL2 logic log:SROIQ syntax ser:OWL2/Manchester
 \end{lstlisting}
 
 
-\DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core:2013, Section 6} with the following changes:
+\DOL adopts the CURIE specification of RDFa Core 1.1 \nisref{W3C/TR REC-rdfa-core:2015, Section 6} with the following changes:
 \begin{itemize}
 \item \DOL does not support the declaration of a ``default prefix'' mapping %\CLnote[type=q-aut]{Are such explanatory notes OK here? --- Yes}
 (covering CURIEs such as \syntax{:name}).
@@ -5090,7 +5090,7 @@ Bindings in a prefix map are evaluated from left to right.  Authors \shouldnot b
 
 While \DOL uses IRIs as identifiers throughout, OMS languages do not necessarily do; for example:
 \begin{itemize}
-\item OWL \nisref{W3C/TR REC-owl2-syntax:2009, Section 5.5} does use IRIs.
+\item OWL \nisref{W3C/TR REC-owl2-syntax:2012, Section 5.5} does use IRIs.
 \item Common Logic \nisref{ISO/IEC 24707:2007} supports them but does not enforce their use.
 \item F-logic \cite{flogic} does not use them at all.
 \end{itemize}
@@ -5245,7 +5245,7 @@ In a CURIE without a prefix, the \syntax{reference} part is \notallowed to match
 %
 % \end{lstlisting}
 %
-%  Note that the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core:2013, Section 6}) is denoted by a colon inside the prefix map, but it is omitted in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
+%  Note that the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core:2015, Section 6}) is denoted by a colon inside the prefix map, but it is omitted in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
 %
 % \vspace{1em}
 %
@@ -8468,7 +8468,7 @@ The canonical namespace IRI for the \DOL Ontology is \url{http://www.omg.org/spe
 Normative snapshots of the implementation are published there.
 The IRI for the version of the \DOL Ontology that corresponds to this version of the OMG standard is \url{http://www.omg.org/spec/DOL/20150801/dol-language/}.
 
-The \DOL Ontology is currently implemented in OWL 2 (\nisref{W3C/TR REC-owl2-syntax:2009}).
+The \DOL Ontology is currently implemented in OWL 2 (\nisref{W3C/TR REC-owl2-syntax:2012}).
 The normative snapshots are encoded in RDF/XML using the OWL 2 mapping to RDF graphs (\nisref{W3C/TR REC-owl2-mapping-to-rdf:2012}).
 
 The ontology makes use of the following standard ontologies and vocabularies:
@@ -8548,7 +8548,7 @@ expected to become the basis for normative activities.
 
 \CLnote{Is it correct that ``With'' and ``of'' use different capitalizations?}%
 \CLnote{Why refer to this external paper when \SROIQ is actually formalized as an institution below?  Maybe cut this sentence and replace it by a general introduction?  Or at least rephrase ``is established'' into ``has originally been established''.}%
-The semantic conformance of OWL 2 DL (as specified in \nisref{W3C/TR REC-owl2-syntax:2009}) with \DOL
+The semantic conformance of OWL 2 DL (as specified in \nisref{W3C/TR REC-owl2-syntax:2012}) with \DOL
 is established in \cite{OntoGraph}.
 
 \section{Conformance of the OWL Serializations With \DOL}\label{a:owl-serializations}
@@ -9966,8 +9966,8 @@ are those whose conformance with \DOL is established in the preceding annexes (O
 \begin{itemize}
 \item RDF \nisref{W3C/TR REC-rdf11-concepts:2014}
 \item RDF Schema \nisref{W3C/TR REC-rdf11-schema:2014}
-\item EL, QL, RL (all being profiles of OWL) \nisref{W3C/TR REC-owl2-profiles:2009}
-\item OWL \nisref{W3C/TR REC-owl2-syntax:2009}
+\item EL, QL, RL (all being profiles of OWL) \nisref{W3C/TR REC-owl2-profiles:2012}
+\item OWL \nisref{W3C/TR REC-owl2-syntax:2012}
 \item CL (Common Logic) \nisref{ISO/IEC 24707:2007}
 \item UML class diagrams \nisref{OMG Unified Modeling Language (UML) specification 2.4.1}
 \item \CASL \cite{CASL-RM} and its sublanguage classical first-order logic (FOL)
@@ -10112,7 +10112,7 @@ The following syntaxes are part of the heterogeneous logical environments:
 
 \EL $\to$ $\OWL$ is the sublanguage inclusion obtained by the
 syntactic restriction according to the definition of \EL, see
-\nisref{W3C/TR REC-owl2-profiles:2009}. Since by definition, $\ELDL{+}{+}$
+\nisref{W3C/TR REC-owl2-profiles:2012}. Since by definition, $\ELDL{+}{+}$
 is a syntactic restriction of $\SROIQ(D)$, $\ELDL{+}{+}$ $\to$ $\SROIQ(D)$
 is the corresponding sublogic inclusion.
 
@@ -10120,7 +10120,7 @@ is the corresponding sublogic inclusion.
 
 \QL $\to$ $\OWL$ is the sublanguage inclusion obtained by the
 syntactic restriction according to the definition of \QL, see
-\nisref{W3C/TR REC-owl2-profiles:2009}. Since by definition, \DLLiteR
+\nisref{W3C/TR REC-owl2-profiles:2012}. Since by definition, \DLLiteR
 is a syntactic restriction of $\SROIQ(D)$, \DLLiteR $\to$ $\SROIQ(D)$
 is the corresponding sublogic inclusion.
 
@@ -10128,7 +10128,7 @@ is the corresponding sublogic inclusion.
 
 \RL $\to$ $\OWL$ is the sublanguage inclusion obtained by the
 syntactic restriction according to the definition of \RL, see
-\nisref{W3C/TR REC-owl2-profiles:2009}. Since by definition, $\RL$
+\nisref{W3C/TR REC-owl2-profiles:2012}. Since by definition, $\RL$
 is a syntactic restriction of $\SROIQ(D)$, $\RL$ $\to$ $\SROIQ(D)$
 is the corresponding sublogic inclusion.
 
