fixed link syntax

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1720,7 +1720,7 @@ Reference.  W3C Recommendation, 18 August 2009\\ \url{http://www.w3.org/TR/2009/
 
 
   \item{ODM} {Ontology Definition Metamodel, 2 September 2014. \\ \url{http://www.omg.org/spec/ODM/1.1/}}
-\item{MOF} { Meta Object Facility} \\ \url{http://http://www.omg.org/mof/}
+\item{MOF} { Meta Object Facility} \\ \url{http://www.omg.org/mof/}
 \item{SMOF} { Support for Semantic Structure, April 2013} \\ \url{http://www.omg.org/spec/SMOF/1.0/}
 \item{XMI} {Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI/}
 %\item{PRR} {Production Rule Representation, December 2009} \\ \url{ http://www.omg.org/spec/PRR/1.0// }
